clusters/dev/matnn/matnn-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matnn-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "11m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - matnn-app.intamixx.uk
      secretName: letsencrypt-prod
  rules:
  - host: matnn-app.intamixx.uk
    http:
      paths:
      - path: /api/upload
        pathType: Prefix
        backend:
          service:
            name: matnn-service
            port:
              number: 8090
